--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd apps/web && npm install && npm run build",
-  "outputDirectory": "apps/web/.next",
-  "installCommand": "cd apps/web && npm install"
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
